--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     // ---------- DATA ----------
     const DATA = {
       email: 'tayeb.eyaser.niloy@gmail.com',
-      cv: 'https://drive.google.com/uc?export=download&id=https://drive.google.com/file/d/1tT8GSvvbRQ5II_u4jgL4KjSVrJb2kU0A/view?usp=sharing', // replace with your Drive FILE ID
+      cv: '1tT8GSvvbRQ5II_u4jgL4KjSVrJb2kU0A', // replace with your Drive FILE ID
       interests: [
         'Wall-bounded turbulence','Experimental fluid mechanics','Flow visualization (PIV/PTV)','Unsteady aerodynamic flows'
       ],
